--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,6 @@ p {
   text-align: center;
 }
 
-
 #idealJob {
   float:right;
 }
@@ -50,6 +49,18 @@ p {
 
 #quizResults {
  text-align: center;
+}
+
+a:link {
+  color: blue;
+}
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: rgb(0, 77, 64);
 }
 
 body {
