--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
-h1{
+.heading {
+  height: 100%
+  background-color: rgb(11, 126, 100);
   text-align: center;
   font-size: 100px;
   font-family: 'Fredericka the Great', cursive;
-  margin: 0px;
   padding: 200px 0px;
   background-color: rgb(11, 126, 100);
 }
