--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,99 @@
-.heading {
-  height: 100%
-  background-color: rgb(11, 126, 100);
-  text-align: center;
-  font-size: 100px;
-  font-family: 'Fredericka the Great', cursive;
-  padding: 200px 0px;
-  background-color: rgb(11, 126, 100);
+html, body {
+  margin: 0px;
+  height: 100%;
 }
 
-.subHeadings {
-  margin: 50px 0px 30px;
-  text-align: center;
-  font-size: 50px;
-  font-family: 'Fredericka the Great', cursive;
-}
-
-.headlines {
-  text-align: center;
-  font-size: 20px;
+body {
+  margin: 0px;
+  font-family: sans-serif;
 }
 
 p {
- margin: 20px 260px;
+ margin: 0px 500px;
+ padding: 15px 0px;
  font-size: 18px;
  text-align: left;
 }
 
-.imageBorders {
-  border-radius: 50px;
-  border: 5px solid rgb(0, 77, 64);
-}
-
-#personalImages {
+.heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+  background-color: rgb(11, 126, 100);
   text-align: center;
 }
 
-#idealJob {
-  float:right;
+h1 {
+  margin: 0px;
+  font-family: 'Fredericka the Great', cursive;
+  font-size: 150px;
+}
+
+.subHeadings {
+  margin: 0px;
+  padding: 20px 0px;
+  text-align: center;
+  font-size: 100px;
+  font-family: 'Fredericka the Great', cursive;
+}
+
+.aboutMe {
+  min-height: 100%;
+  background-color: rgb(140, 184, 156);
+}
+
+.interestInIT {
+  min-height: 100%;
+  background-color: rgb(0, 90, 74);
+}
+
+.myIdealJob {
+  min-height: 100%;
+  background-color: rgb(118, 215, 196);
+}
+
+.personalProfile {
+  min-height: 100%;
+  background-color: rgb(63, 107, 104);
+}
+
+.report {
+  min-height: 100%;
+  background-color: rgb(140, 184, 156);
+}
+
+.references {
+  min-height: 100%;
+  background-color: rgb(11, 126, 100);
+}
+
+.headlines {
+  margin: 0px;
+  padding-bottom: 5px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.centerImages{
+  text-align: center;
+}
+
+.imageDesign {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 420px;
+  width: 420px;
+  border: 5px solid rgb(0, 77, 64);
 }
 
 #jobImage {
-  margin-right: 20px;
-}
-
-#jobImage {
-  float: left;
   margin-left: 260px;
-}
-
-#quizResults {
- text-align: center;
+  margin-right: 20px;
+  height: 820px;
+  width: 380px;
+  border: 5px solid rgb(0, 77, 64);
 }
 
 a:link {
@@ -62,10 +106,4 @@ a:visited {
 
 a:hover {
   color: rgb(0, 77, 64);
-}
-
-body {
-  background-color: rgb(169, 223, 191);
-  margin: 0px 0px 100px 0px;
-  font-family: fantasy;
 }
