--- a/styles.css
+++ b/styles.css
@@ -38,32 +38,32 @@ h1 {
   font-family: 'Fredericka the Great', cursive;
 }
 
-.aboutMe {
+#aboutMe {
   min-height: 100%;
   background-color: rgb(140, 184, 156);
 }
 
-.interestInIT {
+#interestInIT {
   min-height: 100%;
   background-color: rgb(0, 90, 74);
 }
 
-.myIdealJob {
+#myIdealJob {
   min-height: 100%;
   background-color: rgb(118, 215, 196);
 }
 
-.personalProfile {
+#personalProfile {
   min-height: 100%;
   background-color: rgb(63, 107, 104);
 }
 
-.report {
+#report {
   min-height: 100%;
   background-color: rgb(140, 184, 156);
 }
 
-.references {
+#references {
   min-height: 100%;
   background-color: rgb(11, 126, 100);
 }
@@ -88,9 +88,13 @@ h1 {
   border: 5px solid rgb(0, 77, 64);
 }
 
+#jobLink {
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+}
+
 #jobImage {
-  margin-left: 260px;
-  margin-right: 20px;
   height: 820px;
   width: 380px;
   border: 5px solid rgb(0, 77, 64);
