--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ p {
 
 h1 {
   margin: 0px;
-  font-family: 'Fredericka the Great', cursive;
+  font-family: 'Poiret One', cursive;
   font-size: 150px;
 }
 .heading {
@@ -35,7 +35,7 @@ h1 {
   padding: 20px 0px;
   text-align: center;
   font-size: 100px;
-  font-family: 'Fredericka the Great', cursive;
+  font-family: 'Poiret One', cursive;
 }
 
 .headlines {
