--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,12 @@ h1 {
   padding-bottom: 20px;
 }
 
+#report {
+  min-height: 100%;
+  background-color: #BAB2B5;
+  padding-bottom: 20px;
+}
+
 #references {
   min-height: 100%;
   background-color: #EEE2DC;
